syntax = "proto3";

package proto;

option go_package = ".";


// $ protoc --go_out=. --go-grpc_out=. forward_bid.proto

message ForwardBidRequest {
  uint32 user_id = 1;
  uint32 item_id = 2;
  double amount = 3;
  bool is_terminating = 4;
}

message ForwardBidResponse {
  uint32 bid_id= 1;
}

service ForwardBid {
  rpc PlaceBid(ForwardBidRequest) returns (ForwardBidResponse);
}